# PredictTrainTime

./: .gitignore  README.md  plot.py  pyproject.toml  reslut.csv
info/: info.csv
model/: model.pth
src/: train.py
src/core/: __init__.py  dataloader.py  model.py
